Fix an argument size problem which led to a crash on 64-bit OSes.

Reported by:	Ashish Shukla à¤à¤¶à¥à¤· à¤¶à¥à¤à¥à¤² <wahjava.ml@gmail.com>
Obtained from:	http://bugzilla.gnome.org/show_bug.cgi?id=540696